--- a/index.html
+++ b/index.html
@@ -21,17 +21,29 @@
             <div class="dot-pulse__dot"></div>
         </div>
     -->
+
     <div class="main-page">
         <div class="side-nav-conteiner">
             oh hello there
         </div>
 
         <div class="main-page-conteiner">
+            <div class="about-me">
+                <div class="about-me-sub">
+
+                </div>
+
+                <div class="about-me-sub">
+                    <h1>
+                        Acerca de mí
+                    </h1>
+                </div>
+            </div>
+
             <div class="itchio">
                 <h1>
                     Mi Itch.io
                 </h1>
-
                 <div id="itchio-games" class="itchio-games">
                 </div>
             </div>
