main page finishe, responsiveness left

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Maria Zdanovitch - Portfolio</title>
 
-    <link href="././css/common.css" rel="stylesheet" type="text/css">
     <link href="././css/index.css" rel="stylesheet" type="text/css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,27 +18,48 @@
     <!--
         <div class="dot-pulse">
             <div class="dot-pulse__dot"></div>
-        </div>
+        </div>s
     -->
 
     <div class="main-page">
         <div class="side-nav-conteiner">
-            oh hello there
+            <div class="about-me-sub">
+                <h2>
+                    <center>Acerca de mí</center>
+                </h2>
+            </div>
+
+            <div class="about-me-sub">
+                <img src="./img/IMG_20221006_094909.jpg" class="photo">
+                </img>
+            </div>
+
+            <p>
+                Estudiando mí último año de secundaria en la rama de computación.
+                <br>
+                Aspirante a ser diseñadora y/o desarrolladora de videojuegos.
+            </p>
+
+            <div class="about-me-sub-else">
+                <div class="link-else" onclick="showCV()">
+                    Curriculum
+                </div>
+
+                <div class="link-else" onclick="showBehance()">
+                    Behance
+                </div>
+
+                <div class="link-else" onclick="showLinkedin()">
+                    Linkedin
+                </div>
+
+                <div class="link-else" onclick="showGithub()">
+                    Github
+                </div>
+            </div>
         </div>
 
         <div class="main-page-conteiner">
-            <div class="about-me">
-                <div class="about-me-sub">
-
-                </div>
-
-                <div class="about-me-sub">
-                    <h1>
-                        Acerca de mí
-                    </h1>
-                </div>
-            </div>
-
             <div class="itchio">
                 <h1>
                     Mi Itch.io
