side buttons fixed

--- a/index.html
+++ b/index.html
@@ -42,19 +42,27 @@
 
             <div class="about-me-sub-else">
                 <div class="link-else" onclick="showCV()">
-                    Curriculum
+                    <center>
+                        Curriculum
+                    </center>
                 </div>
 
                 <div class="link-else" onclick="showBehance()">
-                    Behance
+                    <center>
+                        Behance
+                    </center>
                 </div>
 
                 <div class="link-else" onclick="showLinkedin()">
-                    Linkedin
+                    <center>
+                        Linkedin
+                    </center>
                 </div>
 
                 <div class="link-else" onclick="showGithub()">
-                    Github
+                    <center>
+                        Github
+                    </center>
                 </div>
             </div>
         </div>
