removed onclink event from html file

--- a/index.html
+++ b/index.html
@@ -41,25 +41,25 @@
             </p>
 
             <div class="about-me-sub-else">
-                <div class="link-else" onclick="showCV()">
+                <div class="link-else" id="cv">
                     <center>
                         Curriculum
                     </center>
                 </div>
 
-                <div class="link-else" onclick="showBehance()">
+                <div class="link-else" id="behance">
                     <center>
                         Behance
                     </center>
                 </div>
 
-                <div class="link-else" onclick="showLinkedin()">
+                <div class="link-else" id="linkedin">
                     <center>
                         Linkedin
                     </center>
                 </div>
 
-                <div class="link-else" onclick="showGithub()">
+                <div class="link-else" id="github">
                     <center>
                         Github
                     </center>
