preloader finished, needs to be centered

--- a/index.html
+++ b/index.html
@@ -14,14 +14,13 @@
 </head>
 
 <body>
-
-    <!--
+    <div class="loader">
         <div class="dot-pulse">
             <div class="dot-pulse__dot"></div>
-        </div>s
-    -->
+        </div>
+    </div>
 
-    <div class="main-page">
+    <div class="main-page hidden" id="main-page">
         <div class="side-nav-conteiner">
             <div class="about-me-sub">
                 <h2>
@@ -103,7 +102,7 @@
         })();
     </script>
 
-    <script src="././js/index.js" type="text/javascript"></script>
+    <script src="././js/index.js" type="module"></script>
 </body>
 
 </html>
