--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
 
 <body>
     <div class="loader">
-        <div class="dot-pulse">
-            <div class="dot-pulse__dot"></div>
+        <div class="dot-conteiner">
+            <div class="dot-pulse">
+                <div class="dot-pulse__dot"></div>
+            </div>
         </div>
     </div>
 
